# SD3-LoRA-CelebA

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
images/: project_workflow.dot
media/: project_workflow.dot
sd3_lora_celeba/: attention.py  celeba.py  dataset.py  ncut.py  prompt.py  visualization.py  visualizer.py  visualizer_new.py
sd3_lora_celeba/cli/: caption_blip2.py  caption_llama3.py  compute_latent_dist.py  compute_prompt_embeds.py  copy_images.py  fine_tune.py  generate_images.py  prepare_celeba.py  prepare_celeba_hq.py  sd3.py  visualize_attention_weights.py  visualize_token_affinities.py
